--- a/src/kaizen/Settings.fxml
+++ b/src/kaizen/Settings.fxml
@@ -54,7 +54,7 @@
          <children>
             <Label layoutX="52.0" layoutY="29.0" styleClass="large-label" text="Settings" />
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="426.0" layoutX="44.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="399.0" />
-            <Label layoutX="180.0" layoutY="116.0" styleClass="small-label" text="Edit Preferences" />
+            <Label layoutX="180.0" layoutY="116.0" styleClass="small-label" text="Edit Categories" />
             <TableView fx:id="catView" layoutX="106.0" layoutY="185.0" prefHeight="275.0" prefWidth="275.0">
               <columns>
                 <TableColumn fx:id="IDClm" minWidth="0.0" prefWidth="2.0" resizable="false" text="ID" />
@@ -63,7 +63,8 @@
               </columns>
             </TableView>
             <Button fx:id="deleteButton" layoutX="106.0" layoutY="473.0" mnemonicParsing="false" onAction="#deleteData" text="Delete" />
-            <Button fx:id="editButton" layoutX="186.0" layoutY="473.0" mnemonicParsing="false" onAction="#editData" text="Update" />
+            <Button fx:id="editButton" layoutX="209.0" layoutY="473.0" mnemonicParsing="false" onAction="#editData" text="Update" />
+            <Button fx:id="addButton" layoutX="318.0" layoutY="473.0" mnemonicParsing="false" onAction="#handlePopUpAddCategory" prefHeight="27.0" prefWidth="62.0" text="Add" />
          </children>
       </AnchorPane>
    </center>
