--- a/src/kaizen/Settings.fxml
+++ b/src/kaizen/Settings.fxml
@@ -53,7 +53,7 @@
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
             <Label layoutX="52.0" layoutY="29.0" styleClass="large-label" text="Settings" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="426.0" layoutX="44.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="399.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="466.0" layoutX="44.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="399.0" />
             <Label layoutX="180.0" layoutY="116.0" styleClass="small-label" text="Edit Categories" />
             <TableView fx:id="catView" layoutX="106.0" layoutY="185.0" prefHeight="275.0" prefWidth="275.0">
               <columns>
@@ -65,6 +65,9 @@
             <Button fx:id="deleteButton" layoutX="106.0" layoutY="473.0" mnemonicParsing="false" onAction="#deleteData" text="Delete" />
             <Button fx:id="editButton" layoutX="209.0" layoutY="473.0" mnemonicParsing="false" onAction="#editData" text="Update" />
             <Button fx:id="addButton" layoutX="318.0" layoutY="473.0" mnemonicParsing="false" onAction="#handlePopUpAddCategory" prefHeight="27.0" prefWidth="62.0" text="Add" />
+            <Label fx:id="status" layoutX="193.0" layoutY="144.0" prefHeight="36.0" prefWidth="97.0" text="Label" wrapText="true" />
+            <Label layoutX="100.0" layoutY="512.0" text="To DELETE: Select row and click delete" />
+            <Label layoutX="100.0" layoutY="529.0" prefHeight="35.0" prefWidth="246.0" text="To UPDATE: Double-click an entry, edit, press ENTER, then click Update" textAlignment="JUSTIFY" wrapText="true" />
          </children>
       </AnchorPane>
    </center>
