--- a/src/kaizen/Timesheets.fxml
+++ b/src/kaizen/Timesheets.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kaizen.TimesheetsController">
+<AnchorPane id="AnchorPane" prefHeight="787.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kaizen.TimesheetsController">
    <children>
       <GridPane layoutX="263.0" layoutY="188.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -41,12 +41,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <ListView prefHeight="30.0" prefWidth="58.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets bottom="25.0" left="20.0" right="275.0" top="25.0" />
-               </GridPane.margin>
-            </ListView>
-            <Rectangle fx:id="categoryColourShape" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="30.0" stroke="TRANSPARENT" strokeType="INSIDE" width="37.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Rectangle fx:id="categoryColourShape" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="30.0" stroke="TRANSPARENT" strokeType="INSIDE" width="37.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="25.0" left="20.0" right="275.0" top="25.0" />
                </GridPane.margin>
@@ -156,17 +151,6 @@
                   <Insets left="-30.0" top="10.0" />
                </GridPane.margin>
             </Label>
-            <RadioButton fx:id="categoryProjects" mnemonicParsing="false" styleClass="projects-radio-button" stylesheets="@stylesheet.css" text="Projects" GridPane.columnIndex="3">
-               <font>
-                  <Font size="20.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="210.0" />
-               </GridPane.margin>
-               <toggleGroup>
-                  <ToggleGroup fx:id="toggleGroup" />
-               </toggleGroup>
-            </RadioButton>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Category" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font size="20.0" />
@@ -188,6 +172,11 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
+            <Label fx:id="status" prefHeight="33.0" prefWidth="108.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="9">
+               <GridPane.margin>
+                  <Insets left="20.0" />
+               </GridPane.margin>
+            </Label>
          </children>
       </GridPane>
    </children>
