--- a/src/kaizen/PopUpLearnings.fxml
+++ b/src/kaizen/PopUpLearnings.fxml
@@ -43,9 +43,9 @@
             </TableView>
             <GridPane GridPane.rowIndex="1">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="10.0" prefWidth="183.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="632.0" minWidth="10.0" prefWidth="429.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="447.0" minWidth="0.0" prefWidth="209.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -56,14 +56,9 @@
                         <Insets left="50.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="edit" mnemonicParsing="false" onAction="#handleSelect" prefHeight="35.0" prefWidth="127.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Select Entry" GridPane.columnIndex="1">
+                  <Button fx:id="edit" mnemonicParsing="false" onAction="#handleSelect" prefHeight="35.0" prefWidth="127.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Select Entry" GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets left="40.0" />
-                     </GridPane.margin>
-                  </Button>
-                  <Button fx:id="refresh" mnemonicParsing="false" onAction="#handleRefresh" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Refresh" GridPane.columnIndex="2">
-                     <GridPane.margin>
-                        <Insets left="30.0" />
                      </GridPane.margin>
                   </Button>
                </children>
@@ -111,8 +106,8 @@
                         <Insets left="90.0" />
                      </GridPane.margin>
                   </Button>
-                  <Label fx:id="confirm" text="Successfully updated learnings!" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <TextField fx:id="pKey" promptText="ID" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                  <Label fx:id="confirm" prefHeight="68.0" prefWidth="248.0" text="Successfully updated learnings! Please close and re-open to see all changes." textAlignment="CENTER" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <TextField fx:id="pKey" promptText="ID" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="6">
                      <GridPane.margin>
                         <Insets bottom="100.0" />
                      </GridPane.margin>
