--- a/src/kaizen/AddCategory.fxml
+++ b/src/kaizen/AddCategory.fxml
@@ -16,14 +16,15 @@
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="88.39927673339844" minWidth="10.0" prefWidth="11.318679809570312" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="94.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="184.0" minHeight="10.0" prefHeight="129.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="132.0" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label styleClass="small-label" stylesheets="@stylesheet.css" text="Add Category" GridPane.columnIndex="1">
                <GridPane.margin>
-                  <Insets bottom="20.0" left="75.0" />
+                  <Insets bottom="-5.0" left="75.0" />
                </GridPane.margin>
             </Label>
             <TextField fx:id="catName" promptText="Enter category name" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -39,6 +40,16 @@
             <Button fx:id="addCat" mnemonicParsing="false" onAction="#handleSubmitAction" text="Submit" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="100.0" />
+               </GridPane.margin>
+            </Button>
+            <Label text="Updated!" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="100.0" />
+               </GridPane.margin>
+            </Label>
+            <Button fx:id="exit" mnemonicParsing="false" onAction="#handleExit" text="Exit" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets top="20.0" />
                </GridPane.margin>
             </Button>
          </children>
