--- a/src/kaizen/EditEntriesPopUp.fxml
+++ b/src/kaizen/EditEntriesPopUp.fxml
@@ -23,7 +23,6 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -31,9 +30,10 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter using the format hh:mm aa" wrappingWidth="120.48046875" GridPane.columnIndex="2" GridPane.rowIndex="5">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter using the format hh:mm aa" wrappingWidth="120.48046875" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <font>
                   <Font />
                </font>
@@ -41,17 +41,17 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <ListView prefHeight="30.0" prefWidth="58.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <ListView prefHeight="30.0" prefWidth="58.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="25.0" left="20.0" right="275.0" top="25.0" />
                </GridPane.margin>
             </ListView>
-            <Rectangle fx:id="categoryColourShape" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="30.0" stroke="TRANSPARENT" strokeType="INSIDE" width="37.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Rectangle fx:id="categoryColourShape" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="30.0" stroke="TRANSPARENT" strokeType="INSIDE" width="37.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="25.0" left="20.0" right="275.0" top="25.0" />
                </GridPane.margin>
             </Rectangle>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
                   <Font size="20.0" />
                </font>
@@ -59,7 +59,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Start time" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Start time" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <font>
                   <Font size="20.0" />
                </font>
@@ -67,7 +67,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="End Time" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="End Time" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <font>
                   <Font size="20.0" />
                </font>
@@ -75,7 +75,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Time spent" GridPane.columnIndex="1" GridPane.rowIndex="7">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Time spent" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <font>
                   <Font size="20.0" />
                </font>
@@ -83,7 +83,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description" GridPane.columnIndex="1" GridPane.rowIndex="8">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <font>
                   <Font size="20.0" />
                </font>
@@ -91,7 +91,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <DatePicker fx:id="DtPicker" prefHeight="31.0" prefWidth="294.0" promptText="Select your date" GridPane.columnIndex="2" GridPane.rowIndex="4">
+            <DatePicker fx:id="DtPicker" prefHeight="31.0" prefWidth="294.0" promptText="Select your date" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -99,17 +99,17 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </DatePicker>
-            <TextField fx:id="timeStartHrField" promptText="e.g. 10:50 am" GridPane.columnIndex="2" GridPane.rowIndex="5">
+            <TextField fx:id="timeStartHrField" promptText="e.g. 10:50 am" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="150.0" right="20.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="timeEndHrField" promptText="Hour" GridPane.columnIndex="2" GridPane.rowIndex="6">
+            <TextField fx:id="timeEndHrField" promptText="e.g. 11:05 am" GridPane.columnIndex="2" GridPane.rowIndex="5">
                <GridPane.margin>
                   <Insets left="150.0" right="20.0" />
                </GridPane.margin>
             </TextField>
-            <Label fx:id="durationLabel" text="Duration of activity" GridPane.columnIndex="2" GridPane.rowIndex="7">
+            <Label fx:id="durationLabel" text="Duration of activity" GridPane.columnIndex="2" GridPane.rowIndex="6">
                <font>
                   <Font size="20.0" />
                </font>
@@ -117,12 +117,12 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Label>
-            <TextArea fx:id="descriptionText" prefHeight="200.0" prefWidth="200.0" promptText="Description" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="8">
+            <TextArea fx:id="descriptionText" prefHeight="200.0" prefWidth="200.0" promptText="Description" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="7">
                <GridPane.margin>
                   <Insets left="20.0" right="20.0" />
                </GridPane.margin>
             </TextArea>
-            <Button fx:id="submit" mnemonicParsing="false" onAction="#handleUpdate" prefHeight="16.0" prefWidth="98.0" styleClass="small-label" stylesheets="@stylesheet.css" text="Update" GridPane.columnIndex="2" GridPane.rowIndex="9">
+            <Button fx:id="submit" mnemonicParsing="false" onAction="#handleUpdate" prefHeight="16.0" prefWidth="98.0" styleClass="small-label" stylesheets="@stylesheet.css" text="Update" GridPane.columnIndex="2" GridPane.rowIndex="8">
                <font>
                   <Font size="20.0" />
                </font>
@@ -130,7 +130,7 @@
                   <Insets left="100.0" right="20.0" />
                </GridPane.margin>
             </Button>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font size="20.0" />
                </font>
@@ -138,7 +138,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Activity" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Activity" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font size="20.0" />
                </font>
@@ -146,7 +146,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <ComboBox fx:id="activityComboBox" editable="true" prefHeight="31.0" prefWidth="294.0" promptText="Type" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <ComboBox fx:id="activityComboBox" editable="true" prefHeight="31.0" prefWidth="294.0" promptText="Type" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="20.0" />
                </GridPane.margin>
@@ -167,7 +167,7 @@
                   <ToggleGroup fx:id="toggleGroup" />
                </toggleGroup>
             </RadioButton>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Category" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Category" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font size="20.0" />
                </font>
@@ -175,12 +175,12 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <ComboBox fx:id="categoryComboBox" editable="true" onAction="#handleInputChangedAction" prefHeight="31.0" prefWidth="294.0" promptText="Type" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <ComboBox fx:id="categoryComboBox" editable="true" onAction="#handleInputChangedAction" prefHeight="31.0" prefWidth="294.0" promptText="Type" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="75.0" right="20.0" />
                </GridPane.margin>
             </ComboBox>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter using the format hh:mm aa" wrappingWidth="120.48046875" GridPane.columnIndex="2" GridPane.rowIndex="6">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter using the format hh:mm aa" wrappingWidth="120.48046875" GridPane.columnIndex="2" GridPane.rowIndex="5">
                <font>
                   <Font />
                </font>
@@ -188,7 +188,12 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <TextField fx:id="timeIDField" editable="false" text="ID" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="success" alignment="CENTER" styleClass="small-label" stylesheets="@stylesheet.css" text="Entry added!" GridPane.columnIndex="2" GridPane.rowIndex="9">
+               <GridPane.margin>
+                  <Insets left="30.0" />
+               </GridPane.margin>
+            </Label>
+            <Button fx:id="exit" mnemonicParsing="false" onAction="#handleExit" styleClass="buttons" stylesheets="@stylesheet.css" text="Exit" GridPane.columnIndex="1" GridPane.rowIndex="9" />
          </children>
       </GridPane>
    </children>
