--- a/src/kaizen/PopUpLearnings.fxml
+++ b/src/kaizen/PopUpLearnings.fxml
@@ -114,6 +114,11 @@
                   </TextField>
                </children>
             </GridPane>
+            <Button fx:id="exit" mnemonicParsing="false" onAction="#handleExit" prefHeight="35.0" prefWidth="80.0" styleClass="buttons" stylesheets="@../../../Kaizen-Innovations1/src/kaizen/stylesheet.css" text="Exit" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="50.0" />
+               </GridPane.margin>
+            </Button>
          </children>
       </GridPane>
    </children>
