--- a/src/kaizen/Timesheets.fxml
+++ b/src/kaizen/Timesheets.fxml
@@ -174,7 +174,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <Label fx:id="status" prefHeight="33.0" prefWidth="108.0" styleClass="output-label" stylesheets="@stylesheet.css" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="11">
+            <Label fx:id="status" prefHeight="52.0" prefWidth="171.0" styleClass="output-label" stylesheets="@stylesheet.css" text="Label" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="11">
                <GridPane.margin>
                   <Insets left="20.0" />
                </GridPane.margin>
