--- a/src/kaizen/Settings.fxml
+++ b/src/kaizen/Settings.fxml
@@ -52,9 +52,10 @@
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="466.0" layoutX="497.0" layoutY="107.0" stroke="BLACK" strokeType="INSIDE" width="521.0" />
             <Label layoutX="52.0" layoutY="29.0" styleClass="large-label" text="Settings" />
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="466.0" layoutX="44.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="399.0" />
-            <Label layoutX="180.0" layoutY="116.0" styleClass="small-label" text="Edit Categories" />
+            <Label layoutX="120.0" layoutY="150.0" styleClass="small-label" text="Edit Categories" />
             <TableView fx:id="catView" layoutX="106.0" layoutY="185.0" prefHeight="275.0" prefWidth="275.0">
               <columns>
                 <TableColumn fx:id="IDClm" minWidth="0.0" prefWidth="2.0" resizable="false" text="ID" />
@@ -65,9 +66,21 @@
             <Button fx:id="deleteButton" layoutX="106.0" layoutY="473.0" mnemonicParsing="false" onAction="#deleteData" text="Delete" />
             <Button fx:id="editButton" layoutX="209.0" layoutY="473.0" mnemonicParsing="false" onAction="#editData" text="Update" />
             <Button fx:id="addButton" layoutX="318.0" layoutY="473.0" mnemonicParsing="false" onAction="#handlePopUpAddCategory" prefHeight="27.0" prefWidth="62.0" text="Add" />
-            <Label fx:id="status" layoutX="193.0" layoutY="144.0" prefHeight="36.0" prefWidth="97.0" text="Label" wrapText="true" />
+            <Label fx:id="status" layoutX="279.0" layoutY="146.0" prefHeight="36.0" prefWidth="103.0" text="Label" wrapText="true" />
             <Label layoutX="100.0" layoutY="512.0" text="To DELETE: Select row and click delete" />
             <Label layoutX="100.0" layoutY="529.0" prefHeight="35.0" prefWidth="246.0" text="To UPDATE: Double-click an entry, edit, press ENTER, then click Update" textAlignment="JUSTIFY" wrapText="true" />
+            <Label fx:id="status1" layoutX="732.0" layoutY="146.0" prefHeight="36.0" prefWidth="97.0" text="Label" wrapText="true" />
+            <Button fx:id="addButton1" layoutX="563.0" layoutY="474.0" mnemonicParsing="false" onAction="#handlePopUpAddCategory" prefHeight="27.0" prefWidth="127.0" text="Report new bug" />
+            <TableView fx:id="errorsView" layoutX="558.0" layoutY="185.0" prefHeight="275.0" prefWidth="409.0">
+               <columns>
+                  <TableColumn fx:id="errorIDClm" minWidth="0.0" prefWidth="2.0" resizable="false" text="ID" />
+                  <TableColumn fx:id="errorDateClm" prefWidth="73.51959228515625" resizable="false" text="Date" />
+                  <TableColumn fx:id="errorNameClm" prefWidth="105.68768310546875" resizable="false" text="Error" />
+                  <TableColumn fx:id="errorPageClm" prefWidth="102.7447509765625" text="Location" />
+                  <TableColumn fx:id="errorDescClm" prefWidth="140.2552490234375" text="Description" />
+               </columns>
+            </TableView>
+            <Label layoutX="555.0" layoutY="153.0" styleClass="small-label" text="History of Errors" />
          </children>
       </AnchorPane>
    </center>
