--- a/src/kaizen/DailyLearnings.fxml
+++ b/src/kaizen/DailyLearnings.fxml
@@ -145,7 +145,7 @@
                         <Insets bottom="40.0" left="40.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="small-label" text="New user?" GridPane.rowIndex="1">
+                  <Text fx:id="typeLabel" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="small-label" text="New user?" GridPane.rowIndex="1">
                      <font>
                         <Font name="Roboto Thin" size="18.0" />
                      </font>
@@ -214,7 +214,7 @@
                      </GridPane.margin>
                   </TableView>
                   <Button fx:id="viewPast" mnemonicParsing="false" onAction="#handlePopUpScreenAction" prefHeight="40.0" prefWidth="120.0" styleClass="buttons" stylesheets="@stylesheet.css" text="View Diary" GridPane.rowIndex="5" />
-                  <Button fx:id="refreshBtn" mnemonicParsing="false" onAction="#handleRefresh" prefHeight="40.0" prefWidth="100.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Refresh" GridPane.rowIndex="1">
+                  <Button fx:id="refreshBtn" mnemonicParsing="false" onAction="#handleRefresh" prefHeight="40.0" prefWidth="100.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Refresh">
                      <GridPane.margin>
                         <Insets left="450.0" right="20.0" />
                      </GridPane.margin>
